# concurrent-language

./: .gitignore  .pre-commit-config.yaml  Grammar.g4  LICENSE  Makefile  README.md  ast_nodes.py  operators.py  operators_test.py  parse.py  parse_test.py  requirements.txt  sample.txt
.github/workflows/: build-test.yaml  lint.yaml
backend/: Makefile
backend/src/: main.cpp  sleep.cpp
backend/test/: fn_tests.hpp  inc.hpp  pthread_setaffinity_np.hpp  sysconf.hpp  test_atomic_shared_enum.hpp  test_block_list.hpp  test_fn.hpp  (+13 more)
compilation/: Cargo.toml
compilation/src/: args.rs  code_size.rs  code_vector.rs  compiler.rs  lib.rs  machine_nodes.rs  named_vector.rs  vector_interval.rs  weak_referrer.rs  weakener.rs
emission/: Cargo.toml
from_variants/: Cargo.toml
lowering/: Cargo.toml
lowering/src/: allocations.rs  compiler.rs  copy_propagation.rs  expression_equality_checker.rs  fn_inst.rs  intermediate_nodes.rs  lib.rs  lower.rs  machine_nodes.rs  recursive_fn_finder.rs  type_equality_checker.rs
optimization/: Cargo.toml
parser/: __main__.py  ast_nodes.py  ast_nodes_test.py  operators.py  operators_test.py  parser.py  parser_test.py
parsing/: __main__.py  ast_nodes.py  ast_nodes_test.py  operators.py  operators_test.py  parser.py  parser_test.py
pipeline/: Cargo.toml
pipeline/src/: args.rs  main.rs
samples/: ackermann.txt  fib.txt  grammar.apfl  grammar.txt  lazy-list.txt  list.txt  main.apfl  mutual-recursion.txt  plus.apfl  samples.apfl  samples.txt  simple.txt  triangular.apfl  triangular.txt
scripts/: benchmark.py  benchmark_visualization.py  benchmark_visualization_test.py  clean_outliers.py  fit.py  fit_test.py  merge_optimization.py  optimization_sweep.sh  timings-visualization.py  timings_visualization.py
translation/: Cargo.toml
type-checker/: Cargo.toml
(+166 files in other folders)
