[package]
name = "lowering"
version = "0.1.0"
edition = "2021"

[dependencies]
from_variants = { version = "0.1.0", path = "../from_variants" }
itertools = "0.14.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
test-case = "3.3.1"
type_checker = { version = "0.1.0", path = "../type-checker" }
