[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
compilation = { version = "0.1.0", path = "../compilation" }
lowering = { version = "0.1.0", path = "../lowering" }
optimization = { version = "0.1.0", path = "../optimization" }
serde_json = "1.0.137"
translation = { version = "0.1.0", path = "../translation" }
type_checker = { version = "0.1.0", path = "../type-checker" }
